<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F3C41"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Todas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/voltar6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="120dp"
            android:contentDescription="@string/imagem"
            app:srcCompat="@drawable/arrowback48px"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/questoestodas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/questoes"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tempotodas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempot"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/materia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quimica"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="0.4"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <ScrollView
            android:id="@+id/sviewt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageT"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/imagem"
                    app:srcCompat="@drawable/cerebro" />

                <TextView
                    android:id="@+id/questaotodas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/questaoq"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/qa"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qtb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/qb"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qtc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/qc"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qtd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/qd"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/proximo6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#379A4DA7"
                android:text="@string/proximo" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>