<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F3C41"
    android:backgroundTint="#3F3C41"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Tela3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <ImageView
            android:id="@+id/voltar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="120dp"
            android:contentDescription="@string/imagem"
            app:srcCompat="@drawable/arrowback48px" />

        <TextView
            android:id="@+id/questoesm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/questoes"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tempom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo"
            android:textSize="24sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/telam"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.4"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <ScrollView
            android:id="@+id/sviewm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageM"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/imagem"
                    app:srcCompat="@drawable/mate" />

                <TextView
                    android:id="@+id/questaom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/questaom"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/ma"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/mb"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/mc"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/md"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:gravity="center"
                android:text="@string/md"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/proximo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#379A4DA7"
                android:text="@string/proximo" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>