<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F3C41"
    android:backgroundTint="#3F3C41"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Tela5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/voltar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="120dp"
            android:contentDescription="@string/imagem"
            app:srcCompat="@drawable/arrowback48px" />

        <TextView
            android:id="@+id/questoesg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/questoes"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tempog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo"
            android:textSize="24sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal">

        <ScrollView
            android:id="@+id/sviewg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageG"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/imagem"
                    app:srcCompat="@drawable/geografia" />

                <TextView
                    android:id="@+id/questaog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/questaog"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/ga"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/gb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/gb"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/gc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/gc"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/gd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:gravity="center"
                android:text="@string/gd"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/proximo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/corner"
                android:backgroundTint="#379A4DA7"
                android:text="@string/proximo" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>