<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F3C41"
    android:orientation="vertical"
    tools:context=".zoom">

    <ImageView
        android:id="@+id/imgzoom"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imagem"
        app:srcCompat="@drawable/questao13p" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textzoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/branco"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/corner"
        android:backgroundTint="#9A4DA7"
        android:text="@string/voltar"
        android:textColor="#FFFFFF" />

</LinearLayout>