<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F3C41"
    android:backgroundTint="#3F3C41"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Tela2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.2"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagem"
            app:srcCompat="@drawable/livro" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/questaop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/questao1"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/branco"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/preto"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/marrom"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:backgroundTint="#9A4DA7"
                android:text="@string/cinza"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="30dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>